jlamontSC-test/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>rC_Event__Payment_Processor_Foreign_GUID__c</fullName>
        <description>The unique GUID that represents the charge card information for this payment. This field only has a value when the integrated payment vendor is themselves passing on the charge card information to another party for processing.</description>
        <inlineHelpText>The unique GUID that represents the charge card information for this payment. This field only has a value when the integrated payment vendor is themselves passing on the charge card information to another party for processing.</inlineHelpText>
        <label>Payment Processor Foreign GUID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Processor_GUID__c</fullName>
        <description>The unique GUID that represents the charge card information for this payment.</description>
        <inlineHelpText>The unique GUID that represents the charge card information for this payment.</inlineHelpText>
        <label>Payment Processor GUID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Processor__c</fullName>
        <description>The third-party vendor that processed this payment.</description>
        <inlineHelpText>The third-party vendor that processed this payment.</inlineHelpText>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corduro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Status__c</fullName>
        <description>Automatically populated, reflects the status of processing related payment.</description>
        <inlineHelpText>Status of processing related payment.</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Uncollectible</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Transaction_Time__c</fullName>
        <description>The date/time that the payment processor states this payment was transacted through their system.</description>
        <inlineHelpText>The date/time that the payment processor states this payment was transacted through their system.</inlineHelpText>
        <label>Payment Transaction Time</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Count__c</fullName>
        <description>Auto Populated, indicates the number of Attendees registered for the Event this Campaign Member is registered for.</description>
        <inlineHelpText>Number of Attendees registered for the Event this Campaign Member is registered for.</inlineHelpText>
        <label>Registration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Date__c</fullName>
        <description>Auto populated, indicates the date and time this Campaign Member registered.</description>
        <inlineHelpText>Date and time this Campaign Member registered.</inlineHelpText>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Meal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, Look up to this Campaign Member&apos;s Meal.</description>
        <inlineHelpText>Look up to this Campaign Member&apos;s Meal.</inlineHelpText>
        <label>Registered Meal</label>
        <referenceTo>rC_Event__Campaign_Meal__c</referenceTo>
        <relationshipLabel>Campaign Members (Registered Meal)</relationshipLabel>
        <relationshipName>Campaign_Members_Registered_Meal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Seat__c</fullName>
        <description>Automatically populated, indicates the Campaign Member&apos;s Seat #.</description>
        <inlineHelpText>Campaign Member Seat #.</inlineHelpText>
        <label>Registered Seat #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Status__c</fullName>
        <description>Automatically populated, indicates the Campaign Member registration status.</description>
        <inlineHelpText>Indicates the Campaign Member registration status.</inlineHelpText>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>RSVPed</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Table_Name__c</fullName>
        <formula>rC_Event__Registered_Table__r.rC_Event__Locator_Code__c</formula>
        <label>Registered Table Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, when campaign member is assigned to a table for current the campaign-venue.</description>
        <inlineHelpText>Auto populated, when campaign member is assigned to a table for current the campaign-venue.</inlineHelpText>
        <label>Registered Table</label>
        <referenceTo>rC_Event__Campaign_Venue__c</referenceTo>
        <relationshipLabel>Campaign Members (Registered Table)</relationshipLabel>
        <relationshipName>Campaign_Members_Registered_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Venue_Name__c</fullName>
        <formula>rC_Event__Registered_Venue__r.rC_Event__Venue_Name__c</formula>
        <label>Registered Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Venue_Seats__c</fullName>
        <description>The specific seats that this campaign member has reserved.</description>
        <inlineHelpText>The specific seats that this campaign member has reserved.</inlineHelpText>
        <label>Registered Venue Seats</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated, look up to the Venue this Campaign Member is registered for.</description>
        <inlineHelpText>Look up to the Venue this Campaign Member is registered for.</inlineHelpText>
        <label>Registered Venue</label>
        <referenceTo>rC_Event__Campaign_Venue__c</referenceTo>
        <relationshipLabel>Campaign Members (Registered Venue)</relationshipLabel>
        <relationshipName>Campaign_Members_Registered_Venue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Rollup_Tickets__c</fullName>
        <description>Auto populated, displays the most recent Campaign Tickets last modified date.</description>
        <inlineHelpText>Displays the most recent Campaign Tickets last modified date.</inlineHelpText>
        <label>Rollup Tickets</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Salutation__c</fullName>
        <description>Salutation of lead or contact</description>
        <inlineHelpText>Salutation of lead or contact</inlineHelpText>
        <label>Salutation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_City__c</fullName>
        <description>Auto populated, Indicates the Shipping City related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping City related to this Campaign Member.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Country__c</fullName>
        <description>Auto populated, Indicates the Shipping Country related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping Country related to this Campaign Member.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Postal_Code__c</fullName>
        <description>Auto populated, Indicates the Shipping Postal Code related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping Postal Code related to this Campaign Member.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_State__c</fullName>
        <description>Auto populated, Indicates the Shipping State/Province related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping State/Province related to this Campaign Member.</inlineHelpText>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Street_Line_1__c</fullName>
        <description>Auto populated, Indicates the Shipping Street related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping Street related to this Campaign Member.</inlineHelpText>
        <label>Shipping Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Street_Line_2__c</fullName>
        <description>Auto populated, Indicates the Shipping Street related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping Street related to this Campaign Member.</inlineHelpText>
        <label>Shipping Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Street__c</fullName>
        <formula>TRIM(IF(AND(ISBLANK(rC_Event__Shipping_Street_Line_1__c), ISBLANK(rC_Event__Shipping_Street_Line_2__c)), &apos;&apos;, IF(AND(ISBLANK(rC_Event__Shipping_Street_Line_1__c)), rC_Event__Shipping_Street_Line_2__c, rC_Event__Shipping_Street_Line_1__c + &apos;, &apos; + rC_Event__Shipping_Street_Line_2__c)))</formula>
        <label>Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Discount_Code__c</fullName>
        <description>Discount code applied to Ticket 1.</description>
        <inlineHelpText>Discount code applied to Ticket 1.</inlineHelpText>
        <label>Ticket 1: Discount Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of tickets of Type 1 purchased.</description>
        <inlineHelpText>Price of tickets of Type 1 purchased.</inlineHelpText>
        <label>Ticket 1: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of tickets of Type 1 purchased.</description>
        <inlineHelpText>Number of tickets of Type 1 purchased.</inlineHelpText>
        <label>Ticket 1: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Status__c</fullName>
        <description>Auto populated, indicates the Status of tickets of Type 1 purchased.</description>
        <inlineHelpText>Status of tickets of Type 1 purchased.</inlineHelpText>
        <label>Ticket 1: Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Ticket_ID__c</fullName>
        <description>Auto populated, indicates the ID of ticket Type 1 purchased.</description>
        <inlineHelpText>ID of ticket Type 1 purchased.</inlineHelpText>
        <label>Ticket 1: Ticket ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Ticket_Name__c</fullName>
        <description>Indicates name of tickets of Type 1 purchased.</description>
        <inlineHelpText>Name of ticket 1</inlineHelpText>
        <label>Ticket 1: Ticket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Discount_Code__c</fullName>
        <description>Discount code applied to Ticket 2.</description>
        <inlineHelpText>Discount code applied to Ticket 2.</inlineHelpText>
        <label>Ticket 2: Discount Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of tickets of Type 2 purchased.</description>
        <inlineHelpText>Price of tickets of Type 2 purchased.</inlineHelpText>
        <label>Ticket 2: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of tickets of Type 2 purchased.</description>
        <inlineHelpText>Number of tickets of Type 2 purchased.</inlineHelpText>
        <label>Ticket 2: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Status__c</fullName>
        <description>Auto populated, indicates the Status of tickets of Type 2 purchased.</description>
        <inlineHelpText>Status of tickets of Type 2 purchased.</inlineHelpText>
        <label>Ticket 2: Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Ticket_ID__c</fullName>
        <description>Auto populated, indicates the ID of ticket Type 2 purchased.</description>
        <inlineHelpText>ID of ticket Type 2 purchased.</inlineHelpText>
        <label>Ticket 2: Ticket ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Ticket_Name__c</fullName>
        <description>Indicates name of tickets of Type2 purchased.</description>
        <inlineHelpText>Name of ticket 2</inlineHelpText>
        <label>Ticket 2: Ticket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Discount_Code__c</fullName>
        <description>Discount code applied to Ticket 3.</description>
        <inlineHelpText>Discount code applied to Ticket 3.</inlineHelpText>
        <label>Ticket 3: Discount Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of tickets of Type 3 purchased.</description>
        <inlineHelpText>Price of tickets of Type 3 purchased.</inlineHelpText>
        <label>Ticket 3: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of tickets of Type 3 purchased.</description>
        <inlineHelpText>Number of tickets of Type 3 purchased.</inlineHelpText>
        <label>Ticket 3: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Status__c</fullName>
        <description>Auto populated, indicates the Status of tickets of Type 3 purchased.</description>
        <inlineHelpText>Status of tickets of Type 3 purchased.</inlineHelpText>
        <label>Ticket 3: Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Ticket_ID__c</fullName>
        <description>Auto populated, indicates the ID of ticket Type 3 purchased.</description>
        <inlineHelpText>ID of ticket Type 3 purchased.</inlineHelpText>
        <label>Ticket 3: Ticket ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Ticket_Name__c</fullName>
        <description>Indicates name of tickets of Type 3 purchased.</description>
        <inlineHelpText>Name of ticket 3</inlineHelpText>
        <label>Ticket 3: Ticket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_ID_Quantity_Zero__c</fullName>
        <description>Stores the comma separated ticket IDs with quantity zero.</description>
        <inlineHelpText>Stores the comma separated ticket IDs with quantity zero.</inlineHelpText>
        <label>Ticket ID Quantity Zero</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Send_To_Email_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated based on value of Campaign to which Campaign Member is linked. If true will identify records to be synced to Eloqua.</description>
        <inlineHelpText>Populated based on value of Campaign to which Campaign Member is linked. If true will identify records to be synced to Eloqua.</inlineHelpText>
        <label>Send To Email Campaign</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>rC_Event__Event_Member</fullName>
        <active>true</active>
        <description>Campaign Member is created through the events package.</description>
        <label>Event Member</label>
    </recordTypes>
    <validationRules>
        <fullName>Bad_Phone_and_Update_Phone_checked</fullName>
        <active>true</active>
        <errorConditionFormula>Bad_Phone__c &amp;&amp; Update_Phone__c</errorConditionFormula>
        <errorMessage>Both Bad Phone and Update Phone cannot both be checked.</errorMessage>
    </validationRules>
</CustomObject>